methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:51: error: ')' expected but 'else' found.
  else {
  ^